# manning-algs

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: binary.ipynb  nary.ipynb  nnary.ipynb
notebooks/.ipynb_checkpoints/: binary-checkpoint.ipynb
tests/: test_nodes.py
trees/: binary_node.py  nary_node.py  nnary_node.py  ops.py
