[tool.poetry]
name = "algs-manning"
version = "0.1.0"
description = ""
authors = ["peter wachira <peterwchr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = {extras = ["jupyter"], version = "^24.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
